err/pymmbtool.err
Listing '.'...
Listing './bin'...
Compiling './bin/dfs_cat.py'...
***   File "./bin/dfs_cat.py", line 28
    print "Syntax: %s <disc.ssd>" % sys.argv[0]
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/dfs_compact.py'...
***   File "./bin/dfs_compact.py", line 29
    print "Syntax: %s <disc.ssd>" % sys.argv[0]
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/dfs_create.py'...
***   File "./bin/dfs_create.py", line 28
    print "Syntax: %s <disc.ssd> <title> [(40|80)]" % sys.argv[0]
                                                  ^
SyntaxError: invalid syntax

Compiling './bin/dfs_erase_file.py'...
***   File "./bin/dfs_erase_file.py", line 28
    print "Syntax: %s <disc.ssd> <dir>.<name>" % sys.argv[0]
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/dfs_get_file.py'...
***   File "./bin/dfs_get_file.py", line 28
    print "Syntax: %s <disc.ssd> <dir>.<name> <os filename>" % sys.argv[0]
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/dfs_put_file.py'...
***   File "./bin/dfs_put_file.py", line 28
    print "Syntax: %s <disc.ssd> <dir>.<name> <os filename>" % sys.argv[0]
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mmb_cat.py'...
***   File "./bin/mmb_cat.py", line 28
    print "Syntax: %s <BEEB.MMB> [<disc_name> | <disc_id>]" % sys.argv[0]
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mmb_compact.py'...
***   File "./bin/mmb_compact.py", line 29
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>)" % sys.argv[0]
                                                          ^
SyntaxError: invalid syntax

Compiling './bin/mmb_create.py'...
***   File "./bin/mmb_create.py", line 28
    print "Syntax: %s <BEEB.MMB> <entry count>" % sys.argv[0]
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mmb_erase_file.py'...
***   File "./bin/mmb_erase_file.py", line 28
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>) <dir>.<file>" % sys.argv[0]
                                                                       ^
SyntaxError: invalid syntax

Compiling './bin/mmb_format.py'...
***   File "./bin/mmb_format.py", line 28
    print "Syntax: %s <BEEB.MMB> <disc_id>" % sys.argv[0]
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/mmb_get_disc.py'...
***   File "./bin/mmb_get_disc.py", line 28
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>) <disc.ssd>" % sys.argv[0]
                                                                     ^
SyntaxError: invalid syntax

Compiling './bin/mmb_get_file.py'...
***   File "./bin/mmb_get_file.py", line 28
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>) <dir>.<file> <unix filename>" % sys.argv[0]
                                                                                       ^
SyntaxError: invalid syntax

Compiling './bin/mmb_put_disc.py'...
***   File "./bin/mmb_put_disc.py", line 28
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>) <disc.ssd>" % sys.argv[0]
                                                                     ^
SyntaxError: invalid syntax

Compiling './bin/mmb_put_file.py'...
***   File "./bin/mmb_put_file.py", line 28
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>) <dir>.<file> <unix filename>" % sys.argv[0]
                                                                                       ^
SyntaxError: invalid syntax

Compiling './bin/mmb_unformat.py'...
***   File "./bin/mmb_unformat.py", line 28
    print "Syntax: %s <BEEB.MMB> (<disc_name> | <disc_id>)" % sys.argv[0]
                                                          ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMMBtool-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
